[project]
name = "phyc"
version = "0.1.1"
description = "Meta package of `phy` project."
authors = [
    {name = "Alfred DU",email = "ihearmywords@hotmail.com"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10, <4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
]

[project.optional-dependencies]
all=[]

[project.urls]
Homepage = "https://github.com/phy-precompiler/phyc"
Repository = "https://github.com/phy-precompiler/phyc"
Issues = "https://github.com/phy-precompiler/phyc/issues"


[build-system]
requires = ["uv_build>=0.10.4,<0.11"]
build-backend = "uv_build"

